@@ -43,8 +43,9 @@ zero). Work-in-progress APIs can change at any time.
   * [Macros](/include/kernaux/macro.h) (*non-breaking since* **0.6.0**)
     * [Example: packing](/examples/macro_packing.c)
     * [Example: CAST\_\*](/examples/macro_cast.c);
-    * [Example: CONTAINER_OF](/examples/macro_container_of.c)
+    * [Example: CONTAINER\_OF](/examples/macro_container_of.c)
     * [Example: BITS](/examples/macro_bits.c)
+    * [Example: STATIC\_TEST\*](/examples/macro_static_test.c)
   * [Assertions](/include/kernaux/assert.h) (*non-breaking since* **0.4.0**)
     * [Example: Assert](/examples/assert.c)
     * [Example: Panic](/examples/panic.c)
