@@ -21,7 +21,7 @@ CPPCHECK_INC = \
 
 CPPCHECK_SUPPRESS = \
   --suppress='constArgument:$(top_srcdir)/examples/macro_cast.c' \
-  --suppress='unusedStructMember:$(top_srcdir)/examples/multiboot2_header_macro.c' \
+  --suppress='unusedStructMember:$(top_srcdir)/examples/*.c' \
   --suppress='unusedStructMember:$(top_srcdir)/tests/test_multiboot2_info_*.c'
 
 CPPCHECK_PATHS = \
